@@ -9,6 +9,8 @@ Major changes since man-db 2.6.0:
 	o Ensure that the target of a symlink or .so chain is always recorded
 	  as a real page.
 
+	o Read a user-specified configuration file even if HOME is unset.
+
 man-db 2.6.0 (9 April 2011)
 ===========================
 
