@@ -1,3 +1,9 @@
+Sun Apr 10 14:45:52 BST 2011  Colin Watson  <cjwatson@debian.org>
+
+	* src/manp.c (read_config_file): Read a user-specified configuration
+	  file even if HOME is unset.
+	* NEWS: Document this.
+
 Sun Apr 10 02:10:56 BST 2011  Colin Watson  <cjwatson@debian.org>
 
 	* src/descriptions_store.c (store_descriptions): Ensure that the
